Fix select icon gap

--- a/sass/variables/_forms.scss
+++ b/sass/variables/_forms.scss
@@ -30,7 +30,7 @@
   --form-padding-vertical: 1rem;
   --form-padding-horizontal: 1.5rem;
   --gap-checkbox: 10px;
-  --gap-select-icon: 10px;
+  --gap-select-icon: 1.5rem;
   --line-height-checkbox: var(--line-height-paragraphs);
   --size-checkbox-marker: 12px;
   --size-radio-button: 16px;
